# ember

./: CMakeLists.txt  _copy.bat  main.cpp
include/: ember.h  file.h  global.h  rand.h
include/engine/: buf.h  camera.h  draw_mode.h  fbo.h  glsm.h  imodel.h  lightmap.h  lines.h  mesh.h  model.h  shader.h  stb_font.h  tex.h  vao.h
include/impl/: anim.h  chunk.h  comp.h  entity.h  palette.h  world.h
libs/glad/: glad.c  glad.h
libs/glfw/: README.md
libs/glfw/include/GLFW/: glfw3.h  glfw3native.h
libs/glfw/src/: context.c  input.c  monitor.c  osmesa_context.c  win32_window.c  window.c
libs/glm/: .gitignore  CMakeLists.txt  manual.md  readme.md
libs/glm/glm/: CMakeLists.txt  common.hpp  glm.hpp
libs/glm/glm/detail/: func_common.inl
libs/glm/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_projection.hpp  matrix_projection.inl  matrix_transform.hpp
libs/glm/glm/gtc/: packing.inl  quaternion.hpp  type_precision.hpp
libs/glm/glm/gtx/: functions.hpp  number_precision.hpp  type_aligned.hpp
libs/stb/: stb_image.h  stb_image_write.h  stb_truetype.h
res/shader/: chunk.frag  chunk.vert  dither.frag  dither.vert  font.frag  font.vert  ilightmap.vert  imodel.frag  imodel.vert  lightmap.vert  lines.frag  lines.geom  lines.vert  model.vert  tris.frag  tris.vert
src/: ember.cpp
src/engine/: camera.cpp  fbo.cpp  glsm.cpp  imodel.cpp  lightmap.cpp  model.cpp  shader.cpp  stb_font.cpp  tex.cpp  vao.cpp
src/impl/: anim.cpp  chunk.cpp  comp.cpp  entity.cpp  world.cpp
